--- a/index.html
+++ b/index.html
@@ -3,26 +3,79 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>مبل ایده آل</title>
+    <title>index</title>
     <link rel="shortcut icon" href="assets/images/doraaal.ico" type="image/x-icon">
-<!--    Logo with ico format-->
+    <!--    Logo with ico format-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/icomoon.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<!--header-->
+<!---->
 <header>
 </header>
+
+<!--section-body-->
 <main>
 
-</main>
-<footer id="footer">
 
+
+    <section class="dv-section-property">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6 col-lg-3 ">
+                    <div class="dv-Property d-flex">
+                        <span class="icon-trophy-1 dv-icon-Property ps-4"></span>
+                        <div class="flex-column">
+                            <h3 class="dv-h-Property">اصالت کالا</h3>
+                            <span class="dv-span-Property">تمامی کالاها اصل میباشد</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 ">
+                    <div class="dv-Property d-flex">
+                        <span class="icon-Quality dv-icon-Property ps-4"></span>
+                        <div class="flex-column">
+                            <h3 class="dv-h-Property">کیفیت</h3>
+                            <span class="dv-span-Property">تمامی کالاها اصل میباشد</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 ">
+                    <div class="dv-Property d-flex">
+                        <span class="icon-Vector dv-icon-Property ps-4"></span>
+                        <div class="flex-column">
+                            <h3 class="dv-h-Property">تحویل</h3>
+                            <span class="dv-span-Property">تحویل در کمتر از یک هفته</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 ">
+                    <div class="dv-Property d-flex">
+                        <span class="icon-customer-support dv-icon-Property ps-4"></span>
+                        <div class="flex-column">
+                            <h3 class="dv-h-Property">پشتیبانی</h3>
+                            <span class="dv-span-Property">پشتیبانی 24 ساعته</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+
+<!--section-footer-->
+<footer id="footer">
 </footer>
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/fontawesome.min.js"></script>
-<script src="assets/js/swiper-bundle.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/slick.min.js"></script>
 <script src="assets/js/index.js"></script>
+<script>
+    $('.single-item').slick();
+</script>
 </body>
 </html>
