--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,17 @@
     </nav>
 </header>
 <main>
+<section id="blogTopBanner">
+    <div class="dv-blog-top-banner-bg-image"></div>
+    <div class="dv-blog-top-banner-search-content">
+        <div class="row g-3">
+            <div class="col-12 col-lg-7">
 
+            </div>
+            <div class="col-12 col-lg-5"></div>
+        </div>
+    </div>
+</section>
 </main>
 <footer id="footer">
 
