Changes to pages (chart & product & cart)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <main>
 
+
     <section class="dv-section-property">
         <div class="container">
             <div class="row">
@@ -61,6 +62,39 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Products-->
+    <section>
+        <div class="container">
+            <div class="row">
+                <h3 class="text-center">محصولات</h3>
+                <div class="col-12 col-md-6 col-lg-3">
+                        <div class="card dv-index-card">
+                            <div class="dv-opacity-card">
+                            <img src="assets/images/cooling%20system.png" class="card-img-top img-fluid" alt="ideal">
+                            <div class="card-body dv-body-card">
+                                <a href="">
+                                    <h5 class="card-title">مبل راحتی مدل235</h5>
+                                    <span>مبل راحتی</span>
+                                </a>
+                                <div class="d-flex justify-content-between mt-2">
+                                    <div>
+                                        <span>5.300.000</span>
+                                        <span>تومان</span>
+                                    </div>
+                                    <div>
+                                        <span>5.300.000</span>
+                                        <span>تومان</span>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
