--- a/blog-info.html
+++ b/blog-info.html
@@ -82,7 +82,7 @@
     </nav>
 </header>
 <main>
-<div class="dv-blog-info-top-bg-color"></div>
+    <div class="dv-blog-info-top-bg-color"></div>
     <section id="blogInfo">
         <div class="container">
             <div class="row g-3">
@@ -94,11 +94,25 @@
                 <div class="col-12">
                     <h2 class="fw-bold">همه چیز درباره گل میخک</h2>
                     <p>
-                        گل میخک چیست و چرا یکی از محبوب‌ترین گل‌های جهان است. گل میخک، از تیره کاریوفیلاسه‌ها و بومی خاور نزدیک است. از گل میخک در صنایع دارویی، آرایشی و بهداشتی، طب سنتی، گل آرایی و… استفاده می‌شود. درباره گل‌های میخک باوری وجود دارد که یونانیان در گذشته نام این گل را Dianthus گذاشته بودند که متشکل از دو واژه لاتین Dios به معنی خدا و Anthos به معنی گل بود که آن را گل خدا می‌نامیدند در داستانی دیگر از افسانه دیانا برخی معتقدند که گل میخک نماد بیگناهان می‌باشد. گل‌های میخک با توجه به رنگ و نوع خود می‌توانند معانی و نماد‌های خاصی داشته باشند. به عنوان مثال میخک قرمز تیره نماد عشق و محبت، میخک سفید نماد محبت و عشق مادرانه و میخک بنفش نمادی برای عزاداری و غم و اندوه می‌باشد. در نتیجه می‌توان از آن برای گل تسلیت هم استفاده کرد.گل میخک بیش از سیصد گونه را تشکیل می‌دهند و که اکثر آن‌ها به عنوان گل‌های تزئینی استفاده می‌شوند و گونه‌های خاصی از آن‌ها به عنوان گونه‌های پرورشی مورد استفاده قرار می‌گیرند.
+                        گل میخک چیست و چرا یکی از محبوب‌ترین گل‌های جهان است. گل میخک، از تیره کاریوفیلاسه‌ها و بومی
+                        خاور نزدیک است. از گل میخک در صنایع دارویی، آرایشی و بهداشتی، طب سنتی، گل آرایی و… استفاده
+                        می‌شود. درباره گل‌های میخک باوری وجود دارد که یونانیان در گذشته نام این گل را Dianthus گذاشته
+                        بودند که متشکل از دو واژه لاتین Dios به معنی خدا و Anthos به معنی گل بود که آن را گل خدا
+                        می‌نامیدند در داستانی دیگر از افسانه دیانا برخی معتقدند که گل میخک نماد بیگناهان می‌باشد. گل‌های
+                        میخک با توجه به رنگ و نوع خود می‌توانند معانی و نماد‌های خاصی داشته باشند. به عنوان مثال میخک
+                        قرمز تیره نماد عشق و محبت، میخک سفید نماد محبت و عشق مادرانه و میخک بنفش نمادی برای عزاداری و غم
+                        و اندوه می‌باشد. در نتیجه می‌توان از آن برای گل تسلیت هم استفاده کرد.گل میخک بیش از سیصد گونه را
+                        تشکیل می‌دهند و که اکثر آن‌ها به عنوان گل‌های تزئینی استفاده می‌شوند و گونه‌های خاصی از آن‌ها به
+                        عنوان گونه‌های پرورشی مورد استفاده قرار می‌گیرند.
                     </p>
                     <p>
-                        میخک‌ها گیاهانی چندساله، نیمه مقاوم با شاخه‌های منشعب هستند. گل‌های میخک را می‌توان هم در باغچه‌ها و هم در گلدان کاشت و آن‌ها را پرورش داد.
-                        گل میخک چیست و چرا یکی از محبوب‌ترین گل‌های جهان است. گل میخک، از تیره کاریوفیلاسه‌ها و بومی خاور نزدیک است. از گل میخک در صنایع دارویی، آرایشی و بهداشتی، طب سنتی، گل آرایی و… استفاده می‌شود. درباره گل‌های میخک باوری وجود دارد که یونانیان در گذشته نام این گل را Dianthus گذاشته بودند که متشکل از دو واژه لاتین Dios به معنی خدا و Anthos به معنی گل بود که آن را گل خدا می‌نامیدند
+                        میخک‌ها گیاهانی چندساله، نیمه مقاوم با شاخه‌های منشعب هستند. گل‌های میخک را می‌توان هم در
+                        باغچه‌ها و هم در گلدان کاشت و آن‌ها را پرورش داد.
+                        گل میخک چیست و چرا یکی از محبوب‌ترین گل‌های جهان است. گل میخک، از تیره کاریوفیلاسه‌ها و بومی
+                        خاور نزدیک است. از گل میخک در صنایع دارویی، آرایشی و بهداشتی، طب سنتی، گل آرایی و… استفاده
+                        می‌شود. درباره گل‌های میخک باوری وجود دارد که یونانیان در گذشته نام این گل را Dianthus گذاشته
+                        بودند که متشکل از دو واژه لاتین Dios به معنی خدا و Anthos به معنی گل بود که آن را گل خدا
+                        می‌نامیدند
                     </p>
                 </div>
 
@@ -110,7 +124,7 @@
                         <img src="assets/images/flower4-min.png" alt="blog info" class="dv-blog-info-content-image">
                     </div>
                     <div class="dv-blog-info-tail-images">
-                        <img src="assets/images/bed%202-min.png" alt="blog info" class="dv-blog-info-content-image">
+                        <img src="assets/images/bed2-min.png" alt="blog info" class="dv-blog-info-content-image">
                     </div>
                     <div class="dv-blog-info-tail-images">
                         <img src="assets/images/flower5-min.png" alt="blog info" class="dv-blog-info-content-image">
@@ -215,7 +229,8 @@
                     <div class="d-flex flex-column">
                         <span class="dv-footer-news-title mb-3">اطلاع از اخرین تخفیفات</span>
                         <form class="d-flex">
-                            <input class="form-control rj-footer-email-input ms-2" type="email" name="email" placeholder="ایمیل خود را وارد کنید"
+                            <input class="form-control rj-footer-email-input ms-2" type="email" name="email"
+                                   placeholder="ایمیل خود را وارد کنید"
                                    aria-label="Search">
                             <button class="rj-footer-submit-button" type="submit">
                                 <span class="icon-carbonsend-alt-filled"></span>
