--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
 </header>
 <main>
     <div class="dv-top-custom-bg"></div>
-    <section id="blogTopBanner">
+    <div class="dv-two-color-orange">
         <div class="dv-blog-top-banner-bg-image"></div>
         <div class="dv-blog-top-banner-search-content">
             <div class="row g-3">
@@ -94,7 +94,8 @@
                             <button type="submit">
                                 <span class="icon-Icon---Search"></span>
                             </button>
-                            <input class="form-control" type="search" name="search" placeholder="جستجو" aria-label="Search">
+                            <input class="form-control" type="search" name="search" placeholder="جستجو"
+                                   aria-label="Search">
                         </form>
                     </div>
                 </div>
@@ -119,7 +120,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <section id="blogContent" class="position-relative">
         <div class="container">
             <div class="row g-5 mt-5">
@@ -513,7 +514,8 @@
                     <div class="d-flex flex-column">
                         <span class="dv-footer-news-title mb-3">اطلاع از اخرین تخفیفات</span>
                         <form class="d-flex">
-                            <input class="form-control rj-footer-email-input ms-2" type="email" name="email" placeholder="ایمیل خود را وارد کنید"
+                            <input class="form-control rj-footer-email-input ms-2" type="email" name="email"
+                                   placeholder="ایمیل خود را وارد کنید"
                                    aria-label="Search">
                             <button class="rj-footer-submit-button" type="submit">
                                 <span class="icon-carbonsend-alt-filled"></span>
