--- a/cart-address-information.html
+++ b/cart-address-information.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>مبل ایده آل | سبد خرید</title>
+    <title>مبل ایده آل | اطلاعات آدرس تحویل</title>
     <link rel="shortcut icon" href="assets/images/doraaal.ico" type="image/x-icon">
     <!--    Logo with ico format-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -86,131 +86,142 @@
     <div class="dv-two-color-orange"></div>
     <div class="dv-content-on-two-color">
         <div class="container">
-            <div class="row">
+            <div class="row g-4">
                 <div class="col-12">
-                    <h2 class="mb-4">سبد خرید</h2>
-
-                    <div class="dv-cart-product-content h-auto mb-5">
-                        <table class="dv-cart-product-table w-100">
-                            <thead>
-                            <tr>
-                                <th></th>
-                                <th>نام محصول</th>
-                                <th>قیمت هر عدد</th>
-                                <th>تعداد</th>
-                                <th>قیمت کل</th>
-                                <th>حذف</th>
-                            </tr>
-                            </thead>
-
-                            <tbody>
-                            <tr>
-                                <td>
-                                    <a href="product-info.html" target="_blank">
-                                        <div class="dv-cart-product-img">
-                                            <img src="assets/images/cart-image1.png" class="img-cover"
-                                                 alt="عکس محصول سبد خرید">
-                                        </div>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="product-info.html" target="_blank">
-                                        <h2 class="dv-product-table-title">صندلی میز تحریر مدل ETW</h2>
-                                    </a>
-                                </td>
-                                <td>
-                                    <span class="dv-card-price dv-cart-product-price">53000 تومان</span>
-                                </td>
-                                <td>
-                                    <div class="dv-product-count">
-                                        <div class="d-flex align-items-center justify-content-center">
-                                            <span class="dv-product-count-icon dv-product-count-plus">+</span>
-                                            <span class="dv-product-count-number">2</span>
-                                            <span class="dv-product-count-icon dv-product-count-minus">-</span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="dv-card-price dv-cart-product-price">5300000 تومان</span>
-                                </td>
-
-                                <td>
-                                    <span class="icon-trash dv-cart-trash-icon"></span>
-                                </td>
-
-                            </tr>
-                            <tr>
-                                <td>
-                                    <a href="product-info.html" target="_blank">
-                                        <div class="dv-cart-product-img">
-                                            <img src="assets/images/cart-image2.png" class="img-cover"
-                                                 alt="عکس محصول سبد خرید">
-                                        </div>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="product-info.html" target="_blank">
-                                        <h2 class="dv-product-table-title">صندلی میز تحریر مدل ETW</h2>
-                                    </a>
-                                </td>
-                                <td>
-                                    <span class="dv-card-price dv-cart-product-price">53000 تومان</span>
-                                </td>
-                                <td>
-                                    <div class="dv-product-count">
-                                        <div class="d-flex align-items-center justify-content-center">
-                                            <span class="dv-product-count-icon dv-product-count-plus">+</span>
-                                            <span class="dv-product-count-number">2</span>
-                                            <span class="dv-product-count-icon dv-product-count-minus">-</span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="dv-card-price dv-cart-product-price">5300000 تومان</span>
-                                </td>
-
-                                <td>
-                                    <span class="icon-trash dv-cart-trash-icon"></span>
-                                </td>
-
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div class="dv-cart-product-content h-auto mb-4 d-flex align-items-center align-items-md-end">
-                        <table class="dv-cart-product-table dv-cart-price-table">
-                            <thead>
-                            <tr>
-                                <th>هزینه کل محصولات</th>
-                                <th>هزینه ارسال</th>
-                                <th>هزینه کل قابل پرداخت</th>
-                            </tr>
-                            </thead>
-
-                            <tbody>
-                            <tr>
-                                <td>
-                                    <span class="dv-card-price dv-cart-product-price">53000 تومان</span>
-                                </td>
-                                <td>
-                                    <span class="dv-cart-product-price">بعد از ثبت آدرس محاسبه می شود</span>
-                                </td>
-                                <td>
-                                    <span class="dv-card-price dv-cart-product-price">5300000 تومان</span>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        <div class="dv-cart-price-button me-auto">
-                            <a href="cart-address-information.html" class="dv-pay-button">پرداخت</a>
-                        </div>
-                    </div>
-
-                    <div class="my-5">
-                        <a href="products.html" target="_blank" class="dv-show-more-products">مشاهده محصولات بیشتر</a>
+                    <h2>سبد خرید / <span class="dv-cart-address-title">اطلاعات آدرس تحویل</span></h2>
+                </div>
+                <div class="col-lg-8">
+                    <div class="dv-cart-product-content">
+                        <form action="" class="row g-4 dv-cart-form">
+                            <div class="col-md-6">
+                                <label class="w-100 d-flex flex-column" for="first_name">
+                                    <span class="dv-cart-from-label-span">نام</span>
+                                    <input id="first_name" type="text" name="first_name"
+                                           class="dv-cart-form-label-input" placeholder="نام خود را وارد کنید">
+                                </label>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="w-100 d-flex flex-column" for="last_name">
+                                    <span class="dv-cart-from-label-span"> نام خانوادگی</span>
+                                    <input id="last_name" type="text" name="last_name" class="dv-cart-form-label-input"
+                                           placeholder=" نام خانوادگی خود را وارد کنید">
+                                </label>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="w-100 d-flex flex-column" for="email">
+                                    <span class="dv-cart-from-label-span">ایمیل</span>
+                                    <input id="email" type="email" name="email" class="dv-cart-form-label-input"
+                                           placeholder="ایمیل خود را وارد کنید">
+                                </label>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="w-100 d-flex flex-column" for="mobile">
+                                    <span class="dv-cart-from-label-span">شماره تماس</span>
+                                    <input id="mobile" type="number" name="mobile" class="dv-cart-form-label-input"
+                                           placeholder="شماره تماس خود را وارد کنید">
+                                </label>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="w-100 d-flex flex-column" for="province">
+                                    <span class="dv-cart-from-label-span">استان</span>
+                                    <select name="province" id="province"
+                                            class="dv-cart-form-label-input province-select js-example-placeholder-single js-states form-control">
+                                        <option></option>
+                                        <option value="آذربایجان شرقی">آذربایجان شرقی</option>
+                                        <option value="تهران">تهران</option>
+                                        <option value="فارس">فارس</option>
+                                    </select>
+                                </label>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="w-100 d-flex flex-column" for="city">
+                                    <span class="dv-cart-from-label-span">شهر</span>
+                                    <select name="city" id="city"
+                                            class="dv-cart-form-label-input city-select js-example-placeholder-single js-states form-control">
+                                        <option></option>
+                                        <option value="تبریز">تبریز</option>
+                                        <option value="تهران">تهران</option>
+                                        <option value="شیراز">شیراز</option>
+                                    </select>
+                                </label>
+                            </div>
+                            <div class="col-12">
+                                <label class="w-100 d-flex flex-column" for="address">
+                                    <span class="dv-cart-from-label-span">آدرس</span>
+                                    <textarea id="address" rows="3" name="address" class="dv-cart-form-label-input"
+                                              placeholder="آدرس را به صورت کامل بنویسید"></textarea>
+                                </label>
+                            </div>
+                            <div class="col-12 d-flex align-items-center justify-content-end">
+                                <button type="submit" class="dv-pay-button">ارسال</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
+
+                <div class="col-lg-4">
+                    <div class="dv-cart-product-content d-flex flex-column justify-content-between">
+                        <div class="w-100 mb-5">
+                            <div class="d-flex align-items-center mb-4">
+
+                                <a href="product-info.html" target="_blank">
+                                    <div class="dv-cart-left-content-image position-relative">
+                                        <img src="assets/images/cart-image1.png" class="img-cover" alt="عکس محصول">
+                                        <span class="dv-custom-badge rounded-circle position-absolute d-flex align-items-center justify-content-center">2</span>
+                                    </div>
+                                </a>
+
+                                <div class="d-flex flex-column justify-content-center dv-left-content-after-image">
+                                    <a href="product-info.html" target="_blank">
+                                        <h2 class="dv-product-table-title">صندلی میز تحریر مدل ETW</h2>
+                                    </a>
+                                    <span class="pe-2 dv-card-price dv-cart-product-price">53000 تومان</span>
+                                </div>
+
+                            </div>
+
+                            <div class="d-flex align-items-center mb-4">
+
+                                <a href="product-info.html" target="_blank">
+                                    <div class="dv-cart-left-content-image position-relative">
+                                        <img src="assets/images/cart-image2.png" class="img-cover" alt="عکس محصول">
+                                        <span class="dv-custom-badge rounded-circle position-absolute d-flex align-items-center justify-content-center">2</span>
+                                    </div>
+                                </a>
+
+                                <div class="d-flex flex-column justify-content-center dv-left-content-after-image">
+                                    <a href="product-info.html" target="_blank">
+                                        <h2 class="dv-product-table-title">صندلی میز تحریر مدل ETW</h2>
+                                    </a>
+                                    <span class="pe-2 dv-card-price dv-cart-product-price">53000 تومان</span>
+                                </div>
+
+                            </div>
+
+                            <hr class="dv-custom-hr">
+
+                            <div class="w-100 d-flex align-items-center justify-content-between mb-4">
+                                <span class="dv-factor-title fw-bold">هزینه کل محصولات</span>
+                                <span class="dv-cart-product-price"><span class="fw-bold dv-card-price">21200000</span> تومان</span>
+                            </div>
+
+                            <div class="w-100 d-flex align-items-center justify-content-between">
+                                <span class="dv-factor-title fw-bold">هزینه ارسال</span>
+                                <span class="dv-cart-product-price">بعد از ثبت آدرس محاسبه می شود</span>
+                            </div>
+
+                            <hr class="dv-custom-hr">
+
+                            <div class="w-100 d-flex align-items-center justify-content-between mb-4">
+                                <span class="dv-factor-title fw-bold">هزینه کل قابل پرداخت</span>
+                                <span class="dv-cart-product-price"><span class="fw-bold dv-card-price">21200000</span> تومان</span>
+                            </div>
+
+                        </div>
+                        <a href="cart-address.html" class="dv-pay-button mx-auto">پرداخت</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
@@ -325,5 +336,6 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/index.js"></script>
+
 </body>
 </html>
